--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 
 header {
 	height: 20vh;
-	font-family: 'Bangers', cursive;
+	font-family: 'Cormorant Garamond', serif;	
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -32,6 +32,10 @@ header {
 	font-size: 30px;
 	font-family: 'McLaren', cursive;
 	margin: 30px 0;
+}
+
+.row1, .row2 {
+	font-family: 'Roboto', sans-serif;
 }
 
 .door-row {
@@ -78,13 +82,14 @@ button:active {
 	font-size: 22px;
 	line-height: 40px;
 	text-align: center;
+	font-family: 'Roboto', sans-serif;
+
 }
 
 .result p:first-child {
-	font-family: 'Bangers', cursive;
+	font-family: 'Roboto', sans-serif;
 	letter-spacing: 2px;
-	text-transform: uppercase;
-	font-size: 40px;
+	font-size: 30px;
 	margin-bottom: 30px;
 }
 
@@ -110,4 +115,9 @@ button:active {
 		font-size: 20px;
 		text-align: center;
 	}
+}
+
+#resetbutton {
+	margin: auto;
+	text-align: center;
 }
