--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,9 @@ header {
 
 .row1, .row2 {
 	font-family: 'Roboto', sans-serif;
+	margin-bottom: 5px;
 }
+
 
 .door-row {
 	text-align: center;
@@ -55,12 +57,12 @@ header {
 .buttons {
 	width: 300px;
 	height: 50px;
-	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 button {
+	/* display: flex; */
 	padding: 10px 40px;
 	background-color: #000;
 	border: none;
@@ -72,6 +74,9 @@ button {
 	outline:none;
 	box-shadow: 0px 10px 13px -7px #000000,
 				7px 5px 15px 5px rgba(0, 0, 0, 0);
+	justify-content: center;
+	align-items: center;
+
 }
 
 button:active {
@@ -79,10 +84,11 @@ button:active {
 }
 
 .result p {
-	font-size: 22px;
+	font-size: 30px;
 	line-height: 40px;
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
+	display: flex;
 
 }
 
