--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color: beige;
+	background-color: #ffffff;
 	min-height: 100vh;
 	display: flex;
 	align-items: center;
@@ -16,7 +16,7 @@ body {
 
 header {
 	height: 20vh;
-	font-family: 'Cormorant Garamond', serif;	
+	font-family: 'Bangers', cursive;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -33,12 +33,6 @@ header {
 	font-family: 'McLaren', cursive;
 	margin: 30px 0;
 }
-
-.row1, .row2 {
-	font-family: 'Roboto', sans-serif;
-	margin-bottom: 5px;
-}
-
 
 .door-row {
 	text-align: center;
@@ -57,12 +51,12 @@ header {
 .buttons {
 	width: 300px;
 	height: 50px;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 button {
-	/* display: flex; */
 	padding: 10px 40px;
 	background-color: #000;
 	border: none;
@@ -74,9 +68,6 @@ button {
 	outline:none;
 	box-shadow: 0px 10px 13px -7px #000000,
 				7px 5px 15px 5px rgba(0, 0, 0, 0);
-	justify-content: center;
-	align-items: center;
-
 }
 
 button:active {
@@ -84,18 +75,16 @@ button:active {
 }
 
 .result p {
-	font-size: 30px;
+	font-size: 22px;
 	line-height: 40px;
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
-	display: flex;
-
 }
 
 .result p:first-child {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Bangers', cursive;
 	letter-spacing: 2px;
-	font-size: 30px;
+	text-transform: uppercase;
+	font-size: 40px;
 	margin-bottom: 30px;
 }
 
@@ -115,15 +104,16 @@ button:active {
 	color:#f5f5f5;
 }
 
+.displayResult{
+	font-size: 30px;
+	text-align: center;
+	color: brown;
+}
+
 @media screen and (max-width:700px) {
 	header {
 		margin-top: 20px;
 		font-size: 20px;
 		text-align: center;
 	}
-}
-
-#resetbutton {
-	margin: auto;
-	text-align: center;
 }
